--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -144,7 +144,7 @@ h2 {
 }
 #footerWrapper {
     background-color: #BF7D65;
-    color: white;
+    color: black;
 }
 footer {
     padding: .5rem $gutter;
@@ -152,15 +152,15 @@ footer {
         p {
             font-size: 1.2rem;
             margin: .5rem;
-            color: white;
+            color: black;
             text-align: center;
             a {
-                color: white;
+                color: black;
                 text-align: center;
             }
         }
         ion-icon {
-            color: white;
+            color: black;
             padding-right: 5px;
         }
     }
@@ -169,11 +169,11 @@ footer {
         justify-content: center;
         a {
             display: block;
-            border: solid 1px white;
+            border: solid 1px black;
             font-size: 2rem;
             margin: .5rem;
             padding: .5rem;
-            color: white;
+            color: black;
             line-height: 100%;
             &:hover {
                 background-color: $fontColor;
